[package]
name = "ota"
version = "0.1.0"
authors = ["Shaun Taheri <shaun.taheri@here.com>"]
publish = false

[dependencies]
clap = "2.31.2"
dirs = "1.0.3"
env_logger = "0.5.10"
log = "0.4.2"
reqwest = "0.8.6"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
serde_urlencoded = "0.5.2"
toml = "0.4.6"
url = "1.7.0"
url_serde = "0.2.0"
urlencoding = "1.0.0"
uuid = { version = "0.6.5", features = ["serde"] }
zip = "0.4.0"
