[package]
name = "ota"
version = "0.1.0"
authors = ["Shaun Taheri <shaun.taheri@here.com>"]
publish = false

[dependencies]
clap = "2.32.0"
dirs = "1.0.4"
log = "0.4.6"
pretty_env_logger = "0.3.0"
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
serde_urlencoded = "0.5.4"
toml = "0.4.10"
url = "1.7.2"
url_serde = "0.2.0"
urlencoding = "1.0.0"
uuid = { version = "0.7.1", features = ["serde"] }
zip = "0.5.0"
